--- a/installation.tex
+++ b/installation.tex
@@ -19,7 +19,7 @@ Each major operating system has its own \LaTeX{} distribution:
     and follow the instructions there to install it.
 
 \item[Windows] has Mik\TeX.
-    Install it from \https{miktex.org/download},
+    Install it from \https{miktex.org/download}
     per the instructions there.
     Mik\TeX{} offers the unique ability to automatically download
     additional packages if your document uses one that it can't find
