--- a/international.tex
+++ b/international.tex
@@ -56,7 +56,7 @@ It will automatically:
     right to left.
 \item Set the script and language tags of OpenType fonts that have them.
 \end{itemize}
-When using the package, specify the main language of your document,
+To use the package, specify the main language of your document,
 along with any other languages you use.
 Some languages also take regional dialects as an optional argument:
 \begin{leftfigure}
