--- a/latex-book.tex
+++ b/latex-book.tex
@@ -88,6 +88,7 @@
 % Disable ligatures across grapheme boundaries
 % (see the package manual for details.)
 \usepackage[american]{selnolig}
+% I have no idea why Garamond has this on by default.
 \nolig{Th}{T|h}
 
 % Use symbols for footnotes, resetting each page
