--- a/punctuation.tex
+++ b/punctuation.tex
@@ -46,7 +46,7 @@ hyphens (\,-\,), en dashes (\,--\,),
 em dashes (\,---\,), and minus signs (\,$-$\,)
 serve different purposes:
 \begin{description}
-\item[Hyphens] have a few uses:\endnote{Matthew Butterick,
+\item[Hyphens] have a few applications:\endnote{Matthew Butterick,
     ``Hyphens and dashes''\quotekern,
     \textit{Practical Typography},
     \https{practicaltypography.com/hyphens-and-dashes.html}}
@@ -85,7 +85,7 @@ serve different purposes:
 
 A set of three dots used to indicate a pause or omission is called an
 \introduce{ellipsis}.
-It is set using \verb|\ldots|.
+It is set with \verb|\ldots|.
 \begin{leftfigure}
 \begin{lstlisting}
 I'm\ldots{} not sure.
@@ -121,7 +121,7 @@ Please call Ms.~Shrdlu.
 In other occasions, such as when we abbreviate units of
 measurement,\punckern\footnote{There are also dedicated packages for doing so,
 like \texttt{siunitx}.}
-we want spaces that are thinner than usual inter-word ones.
+we want thinner spaces than our usual inter-word ones.
 For these, we use \verb|\,|\,:
 \begin{leftfigure}
 \begin{lstlisting}
