--- a/why.tex
+++ b/why.tex
@@ -15,7 +15,7 @@ work.\punckern\endnote{Erik Spiekermann, ``Type is Visible Language''
 (presented at Beyond Tellerrand, Düsseldorf, Germany, May 19--21, 2014),
 \https{www.youtube.com/watch?v=ggQpDu63kk0}}
 \begin{leftfigure}
-\fontspec{TeX Gyre Termes}\fontsize{12pt}{24pt}\selectfont\raggedright
+\fontspec{TeX Gyre Termes}\fontsize{12bp}{24bp}\selectfont\raggedright
 Typography is why this evokes the terrible essays
 you wrote in school.
 Do you see many books that look this way?
@@ -55,7 +55,7 @@ you won't find better typesetting software.
 By carefully handling subtle details,
 \LaTeX{} provides high-quality layouts
 with little effort from you, the author.
-Modern versions can also take advantage of new\footnote{By new,
+Modern versions can also leverage recent\footnote{By recent,
 I mean ``from the mid-1990s''\quotekern, but web browsers and desktop publishing
 software are only just starting to catch up.} advances in computer typography,
 offering you the same tools used by professional designers and publishers.
@@ -123,7 +123,7 @@ However, it comes with a few advantages:
     are my own creations. The former \introduce{italicizes} text, and
     the latter sets words in \acronym{small caps} with a bit of extra
     \,\textsc{\addfontfeature{LetterSpace=15}letterspacing}\, so the characters
-    don't look \textsc{too crowded}.
+    don't look \textsc{\addfontfeature{LetterSpace=-2}too crowded}.
     If tomorrow I decide to introduce new terms
     \textbf{\itshape with this look} and set acronyms
     {\small\addfontfeature{LetterSpace=6} LIKE THIS},
