Feedback from Peter Flynn
(via the EduTeX TUG mailing list. Thanks, Peter!)

--- a/back.tex
+++ b/back.tex
@@ -8,8 +8,8 @@
 
 As promised at the start, this book is incomplete.
 To keep things short,
-major \LaTeX{} features---like figures, captions, and graphics---haven't
-been discussed.
+major \LaTeX{} features---like figures, captions, tables, graphics,
+and bibliographies---haven't been discussed.
 Use some of these resources to fill in the gaps:
 
 \begin{adjustwidth}{1.5em}{0pt}
