--- a/fonts.tex
+++ b/fonts.tex
@@ -84,7 +84,10 @@ The latter has its own font loader,
 based on code from FontForge.\punckern\endnote{\textit{\LuaTeX{} Reference}
 (Version 1.0.4, February 2017), 10}
 The expected name of a font might differ between the two engines---refer
-to the \texttt{fontspec} manual for details.}
+to the \texttt{fontspec} manual for details.
+If you're having trouble getting \LaTeX{} to find your fonts,
+try rebuilding your system's font cache.
+(Figuring out how to do so is left as a web search for the reader.)}
 However, many typefaces come in more than two weights---some versions of Futura,
 for example, come in
 {\fontspec[Scale=MatchLowercase]{Futura-Lig}light},
