--- a/history.tex
+++ b/history.tex
@@ -41,7 +41,7 @@ of \textit{The Ren~\&~Stimpy Show}.\punckern\endnote{``yak shaving''\quotekern,
 \textit{The Jargon File},
 \http{www.catb.org/~esr/jargon/html/Y/yak-shaving.html}}}
 of all time.
-For years, he paused all work on his books to create his own
+For years, he paused work on his books to create his own
 typesetting system.
 When the dust settled in 1978, Knuth had the first version of
 \TeX.\punckern\footnote{The name ``\TeX{}'' comes from the Greek
