--- a/international.tex
+++ b/international.tex
@@ -12,7 +12,9 @@ computers usually represent text with Unicode. Briefly,
 \begin{itemize}
 \item A Unicode text file is made from a series of \introduce{code points},
     each of which can represent a character to be drawn,
-    an accent or other diacritical mark to combine with an adjacent character,
+    an accent or other diacritical mark to combine with an adjacent
+    character,\punckern\footnote{As a silly example, the skin tones
+    for emoji are specified as combining code points.}
     or some non-printing character,
     such as an instruction to print subsequent text right-to-left.
 \item One or more of these code points combines to represent a
