--- a/latex-book.tex
+++ b/latex-book.tex
@@ -128,6 +128,7 @@
 
 \DeclareTOCStyleEntry[%
     beforeskip=8pt,
+    entryformat = \bfseries,
     entrynumberformat = \addfontfeature{Numbers={Tabular,Uppercase}},
     pagenumberformat = \addfontfeature{Numbers={Tabular,Uppercase}},
     linefill = \TOCLineLeaderFill
