--- a/punctuation.tex
+++ b/punctuation.tex
@@ -23,7 +23,9 @@ will get you
 "This isn't right."
 \end{leftfigure}
 Instead, use \texttt{`} for opening quotes and \texttt{'} for closing
-quotes.\punckern\footnote{Don't use \texttt{"} for closing double quotes.
+quotes.\punckern\footnote{If your keyboard layout happens to have keys for
+``curly'' quotes (\,\texttt{“}\,\texttt{”}\,), feel free to use those instead!
+Also, don't use \texttt{"} for closing double quotes.
 Not only does \texttt{``example"} look a bit unbalanced,
 but \texttt{"} is used as a formatting command when typesetting certain
 languages, like German. (See \chapref{i18n} for more on international
@@ -85,16 +87,16 @@ serve different purposes:
 
 A set of three dots used to indicate a pause or omission is called an
 \introduce{ellipsis}.
-It is set with \verb|\ldots|.
+It is set with \verb|\dots|.
 \begin{leftfigure}
 \begin{lstlisting}
-I'm\ldots{} not sure.
+I'm\dots{} not sure.
 \end{lstlisting}
 \end{leftfigure}
 becomes
 \begin{leftfigure}
 \lm%
-I'm\ldots{} not sure.
+I'm\dots{} not sure.
 \end{leftfigure}
 
 \section{Spacing}
