--- a/structure.tex
+++ b/structure.tex
@@ -101,7 +101,7 @@ Goodbye!
 \end{lstlisting}
 \end{leftfigure}
 Some levels may not be available depending on the document class
-you've chosen. Parts and chapters, for example, only appear in books.
+you've chosen. Chapters, for example, only appear in books.
 And don't go too crazy with these commands.
 Most works only benefit a few levels of hierarchy.
 
